<resources>
    <string name="app_name">Base Municipality</string>
    <string name="app_name_title">Base Rural Municipality</string>
    <string name="splash_welcome_text">Welcome to Base Municipality</string>

    <string name="base_url" translatable="false">http://palika.engineeringinnepal.com/palika/storage/</string>

    <string name="nepal_government">Government of Nepal</string>
    <string name="action_settings">Settings</string>
    <string name="introduction">Introduction</string>
    <string name="home">Home</string>
    <string name="nepali">Nepali</string>
    <string name="no_data">No Data</string>
    <string name="press_back_again_to_exit">Press back again to exit.</string>

    <string name="format_address">Address: %s</string>
    <string name="format_email">Email: %s</string>
    <string name="format_office_phone">Office Phone: %s</string>
    <string name="format_personal_phone">Personal Phone: %s</string>
    <string name="format_appointment_date">Appointment Date: %s</string>
    <string name="format_phone">Phone: %s</string>
    <string name="format_mobile">Mobile: %s</string>
    <string name="format_fax">Fax: %s</string>
    <string name="format_services">Services: %s</string>
    <string name="phone_label">Phone:</string>
    <string name="fax_label">Fax:</string>
    <string name="email_label">Email:</string>
    <string name="website_label">Website:</string>
    <string name="facebook_label">Facebook:</string>
    <string name="google_plus_label">Google Plus:</string>
    <string name="twitter_label">Twitter:</string>
    <string name="contact_form_header">For any suggestions, fill out the form below, we will be happy to accept feedback.</string>
    <string name="send">Send</string>
    <string name="message_star">Message *</string>
    <string name="email_star">Email *</string>
    <string name="contact_number_star">Contact Number *</string>
    <string name="address_star">Address *</string>
    <string name="full_name_star">Full Name *</string>
    <string name="loading">Loading…</string>
    <string name="available_soon">Will be available soon.</string>
    <string name="error_internet_problem">There was a problem loading data. Please check your internet connection.</string>
    <string name="rate_app">Rate App</string>
    <string name="error_play_store_not_found">Play store not found.</string>
    <string name="notifications">Notifications</string>
    <string name="about_app">About App</string>
    <string name="license">Open Source Licenses</string>
    <string name="contactimage">contactImage</string>
    <string name="sectionicon" />

</resources>
