<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/contact_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/textPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:padding="@dimen/default_margin"
            android:text="@string/app_name"
            android:textColor="@color/textPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/contact_phone_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/phone_label"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contact_phone1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/contact_phone2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_fax_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin"
            android:textStyle="bold|italic">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/fax_label"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/contact_fax_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_email_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin"
            android:textSize="16sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/email_label"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/contact_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:background="?selectableItemBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_website_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/website_label"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/contact_website_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="?selectableItemBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_facebook_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/facebook_label"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/contact_facebook_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="?selectableItemBackground"
                android:linksClickable="true"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_google_plus_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/google_plus_label"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/contact_google_plus_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="?selectableItemBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_twitter_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/twitter_label"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/contact_twitter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="?selectableItemBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="@dimen/default_margin"
            android:text="@string/contact_form_header"
            android:textColor="@color/textPrimaryDark"
            android:textSize="18sp"
            android:textStyle="italic" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameInoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:padding="@dimen/default_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contact_full_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_star"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contact_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_star"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/numberInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contact_contact_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number_star"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contact_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_star"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/messageInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contact_message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_star"
                android:inputType="text"
                android:lines="4" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/contact_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:padding="@dimen/default_margin"
            android:text="@string/send" />

    </LinearLayout>

</ScrollView>
