<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/imagePreview"
            android:layout_toStartOf="@+id/imagePreview"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:padding="@dimen/drawable_padding"
            android:text="Medium Text"
            android:textColor="@color/textPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/designationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/nameTextView"
            android:layout_toLeftOf="@+id/imagePreview"
            android:layout_toStartOf="@+id/imagePreview"
            android:padding="4dp"
            android:text="Small Text"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/designationTextView"
            android:layout_toLeftOf="@+id/imagePreview"
            android:layout_toStartOf="@+id/imagePreview"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/officePhoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="4dp"
                android:text="@string/format_office_phone"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/personalPhoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="4dp"
                android:text="@string/format_personal_phone"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="4dp"
                android:text="@string/format_email"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/format_address"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/appointmentDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/format_appointment_date"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:contentDescription="@string/contactimage"
            android:maxHeight="300dp"
            android:maxWidth="300dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_contacts" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
